<resources>
    <string name="app_name">Tip</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="rate_amazing_20">Amazing (20%)</string>
    <string name="rate_good_18">Good (18%)</string>
    <string name="rate_okay_15">Okay (15%)</string>
    <string name="btn_calculate">CALCULATE</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="round_up_tip">Round up tip?</string>
</resources>